--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,6 @@ hr{
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), whitesmoke, rgba(0, 0, 0, 0));
 }
+#current_weather{
+    color:white;
+}
