--- a/css/styles.css
+++ b/css/styles.css
@@ -40,12 +40,11 @@ body{
 }
 
 #temperature{
-    float:left;
     font-size: 20px;
 }
 #tempButtonWrapper{
-    margin-left:650px;
-    margin-right:400px;
+    margin: 0 auto;
+    width: 100px;
 }
 hr{
     border: 0;
@@ -54,4 +53,10 @@ hr{
 }
 #current_weather{
     color:white;
+}
+
+@media all and (max-width: 700px){
+    .title{
+        font-size: 30px;
+    }
 }
