--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,10 @@ body{
     margin: 0 auto;
     width: 100px;
 }
+.wi{
+    font-size:40px;
+    margin-bottom: 10px;
+}
 hr{
     border: 0;
     height: 1px;
