--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,11 @@ body{
     margin: 0 auto;
     width: 100px;
 }
+#icons{
+    font-size:100px;
+}
 .wi{
-    font-size:40px;
+
     margin-bottom: 10px;
 }
 hr{
